--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,7 +12,7 @@
     <string name="rpbtn_2">View</string>
     <string name="rpbtn_3">Update</string>
     <string name="rpbtn_4">Delete</string>
-    <string name="rpbtn_intro">Continue</string>
+    <string name="rpbtn_intro">Continues</string>
     <string name="dashboard_title">Nilwala Education</string>
     <string name="dashboardhall">Hall Management</string>
 </resources>
