update12(mainActivity update,testing)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,14 @@
     <string name="rsalary_Teacher_sal">Enter Teacher Salary</string>
     <string name="rsalarycompanypayment">Company Payment</string>
     <string name="rsalaryteacher_netsal">Teacher Net Salary</string>
-    <string name="rschedule_btn_intro">Continue</string>
+    <string name="rschedule_btn_intro">Manage Class</string>
+    <string name="err_classId">Enter valid Class ID</string>
+    <string name="err_teachername">Enter valid Name</string>
+    <string name="err_classday">Enter valid day</string>
+    <string name="err_duration">Enter valid duration</string>
+    <string name="err_startingtime">Enter valid time</string>
+
+
     <string name="dashboard_title">Nilwala Education</string>
     <string name="rbtn_1">OK</string>
     <string name="rbtn_2">Clear</string>
@@ -21,6 +28,7 @@
     <string name="title_classManagemet">Nilwala Education</string>
     <string name="dashboardhall">Hall Management</string>
     <string name="emp_title">Teacher Salary Management System</string>
+    <string name="rschedule_btn_classfee">Class Fee</string>
 </resources>
 
 
